--- a/README.org
+++ b/README.org
@@ -28,14 +28,14 @@ Bachelor Degree Majored in Chemical engineering and performed a graduation proje
 
 ** Accomplished Business Development Manager at Almurabit
 Spearheading the successful marketing and promotion of three cutting-edge technologies in the Iraqi oil field market:
-  a. Down Hole Memory Camera: Advanced technology enabling exploration with full HD image and video capture for optimal well intervention decision-making and production enhancement.
-  b. Echo Meter Sensor: Established technology for precise liquid level monitoring, providing critical data for informed decision-making in well operations.
-  c. BossPac Vibration Sensors: Innovative technology utilizing magnetically attached vibration sensors to monitor equipment performance, providing predictive insights for proactive maintenance.
+  1. Down Hole Memory Camera: Advanced technology enabling exploration with full HD image and video capture for optimal well intervention decision-making and production enhancement.
+  2. Echo Meter Sensor: Established technology for precise liquid level monitoring, providing critical data for informed decision-making in well operations.
+  3. BossPac Vibration Sensors: Innovative technology utilizing magnetically attached vibration sensors to monitor equipment performance, providing predictive insights for proactive maintenance.
 
 ** Proven service delivery manager and acting operations manager responsible for:
-  a. leading a team of 140 crew members and consultants for seamless testing and slickline operations.
-  b. ensuring the availability of operational equipment and highly skilled personnel for renowned clients such as DNO, HKN, TAQA, Rosneft, and Gazprom.
-  c. conducting thorough monthly PnL reviews to monitor operational performance.
+  1. leading a team of 140 crew members and consultants for seamless testing and slickline operations.
+  2. ensuring the availability of operational equipment and highly skilled personnel for renowned clients such as DNO, HKN, TAQA, Rosneft, and Gazprom.
+  3. conducting thorough monthly PnL reviews to monitor operational performance.
 
 ** Service Quality Coach specializing in:
   1. Enhancing service delivery by implementing best practices for Surface Well Test and Slick Line crews.
