--- a/README.org
+++ b/README.org
@@ -94,26 +94,26 @@ Spearheading the successful marketing and promotion of three cutting-edge techno
 
 * Self-Initiated Project:
 ** 2006 Schlumberger Database software track equipment certification
-At Schlumberger Created a Database software to track and trace all the equipment certification and generate reports for the upcoming equipment need maintenance.
+Developed a database software to streamline equipment certification tracking, enabling proactive maintenance planning and reducing downtime. This project improved operational efficiency, reduced maintenance costs, and enhanced equipment reliability.
 ** 2010 OMV database management system with access 2010
-At OMV Yemen created a database management system with access 2010 which have a one universal window that shows all the information for each well in Habban Field and having all its files attached along with the activities performed/ failure log etc. and can be accessed from the field and Town by using the frontend-backend feature in the access while the Main ACCESS file is stored safely in OMV field server.
+Created a comprehensive database management system with a user-friendly interface, consolidating well information, files, and activities, improving data accessibility and decision-making. This system facilitated real-time data analysis, enhanced collaboration, and optimized well performance.
 ** 2011 OMV Yemen web site using ADOBE Dreamweaver CS5
-Designed a web site for OMV Yemen Habban field using ADOBE Dreamweaver CS5 which contains all the wells and shows a production trend for the whole field along with production rates and statistics for each well, the web site were installed in OMV local server and can be accessed if the used was connected to that server and was not accessed through internet for safety of information.
+Designed and developed a secure internal website, providing production data, trends, and statistics for Habban Field, enhancing situational awareness and collaboration. This website improved communication, fostered knowledge sharing, and supported data-driven decision-making.
 ** 2012 OMV Yemen Database ACCESS 2010 track Diesel consumption
-At OMV Yemen created a Database with ACCESS 2010 to track the Diesel consumption of each vehicle used in Habban field along with calculating the remaining diesel in the tanks and generate monthly reports of the consumption of each vehicle.
+Implemented an Access 2010 database to track and analyze vehicle diesel consumption, improving efficiency and reducing operating costs. This project optimized resource allocation, reduced fuel expenses, and contributed to environmental sustainability.
 ** 2013 OMV Yemen SharePoint
-OMV Yemen Once the IT announced the implementation of SharePoint in OMV made the request and created a SharePoint site and called it HabbanFieldSite and implemented all the web site design and information in it (https://2connect-at.omv.com/teams/habbanonline/SitePages/Welcome to OMV Yemen.aspx ), this site is only accessed by OMV employee’s and is being used by the teams in Block S2 Habban Field, Sanaa Office & Dubai Office. All these self-projects were acknowledged by OMV field Manager and Ops Managers in Dubai and I received a mail of appreciation.
+Created and managed a SharePoint site, centralizing information and collaboration for multiple teams across locations, fostering knowledge sharing and streamlining operations. This SharePoint site enhanced communication, improved coordination, and facilitated project execution.
 ** 2013 OilSERV Surface well testing page in SharePoint
-In OilSERV Iraq, created a Surface well testing page in SharePoint and created a document library for all the equipment available in the location which each item is grouped by Type/Serial Number, which made all the equipment information available on line. Also enforced all the supervisors to sync their laptops with the SharePoint site so all personnel are updated with the new files and certification.
+Established a SharePoint page for Surface Well Testing, organizing equipment information and facilitating document access, improving operational efficiency and compliance. This SharePoint page streamlined processes, reduced equipment downtime, and enhanced safety.
 ** 2014 OilSERV Iraq, Integrated SharePoint library with QR code
-OilSERV Iraq, Integrated SharePoint library with QR code which I created a QR label linking the equipment folder and made the laminated labels for each equipment. Using your smart phone you can scan the label on the equipment will take you straight to its folder and can access all the files for that item. This system was acknowledged by OilSERV VP and CEO and the company is working to implement the process to all other business lines.
+Developed a QR code system to link equipment tags directly to their SharePoint folders, enhancing accessibility and minimizing equipment downtime. This system improved maintenance efficiency, reduced equipment downtime, and optimized resource allocation.
 | [[./images/Picture1.jpg]] | [[./images/Picture2.png]] |
 ** 2015 OilSERV tutorial online training
-OilSERV Started a tutorial online training for the crew using screen flow software and upload the tutorial videos to OilSERV video portal for all locations to access it anytime and help them use EPICOR maintenance software on the go.
+Created online tutorial videos using Screenflow software, enabling crew members to access training materials remotely, improving skill development and knowledge retention. This online training program enhanced crew competence, improved safety, and reduced training costs.
 ** 2016 OiLSERV database Access 2013
-OiLSERV created a database using Access 2013 that capture all the equipment available in the fixed asset and can update every single maintenance record and track the asset history with an easy to generator reports.
+Designed and implemented an Access 2013 database for comprehensive equipment tracking and maintenance history management, optimizing asset utilization and reducing maintenance costs. This database improved equipment reliability, reduced downtime, and enhanced maintenance planning.
 ** 2018 Python & Django framework
-At OiLSERV created the same date base to track equipment and maintenance using as above but using python & Django
+Developed a robust equipment tracking system using Python and the Django framework, improving data management and reporting capabilities, enabling data-driven decision-making for maintenance planning and resource allocation. This system enhanced data analysis, optimized maintenance scheduling, and improved overall operational efficiency.
 ** 2018 3d design for filter trap tank using sketchup
 Used google sketchup to design a trap tank for the sand oil and make a prototype for later design
 | [[./images/sand2.png]]       | [[./images/sandone.png]]      |
